--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,17 +1,22 @@
 .login {
-   background-color: white;
+   background-color: rgb(253, 105, 107);
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
 }
 
+.login_container {
+   margin-top: 100px;
+}
+
 .login_container > form {
+   background-color: rgba(240, 248, 255, 0.589);
    width: 300px;
    height: "fit-content";
    display: flex;
    flex-direction: column;
-   border-radius: 5px;
+   border-radius: 10px;
    border: 1px solid lightgray;
    padding: 20px;
 }
@@ -33,5 +38,25 @@
 }
 
 .login_container > form > button {
-   margin-bottom: 5px;
+   display: block;
+   margin: 50px auto auto auto;
+   border-radius: 7px;
+   background-color: #54cc74;
+   border: none;
+   border-radius: 6px;
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   transition: 0.3s;
+   margin: 8px;
+}
+
+.login_container > form > button:hover {
+   cursor: pointer;
+   background-color: #2b663b;
+   color: white;
+   transition: 0.5s;
 }
