--- a/src/DashBoard/DashBoard.css
+++ b/src/DashBoard/DashBoard.css
@@ -1,3 +1,27 @@
 .dashboard > button {
    border-style: none;
+
+   border: 2px solid black;
+   border-radius: 50%;
+   margin: 9px;
+   width: 36px;
+   height: 36px;
+
+   background: transparent;
+
+   cursor: pointer;
+   display: inline-block;
+
+   /* animate and time the transitions*/
+   -webkit-transition: all 0.4s;
+   -moz-transition: all 0.4s;
+   transition: all 0.4s;
+}
+
+.dashboard > button:hover {
+   background-color: black;
+   color: white;
+   -webkit-transition: all 0.4s;
+   -moz-transition: all 0.4s;
+   transition: all 0.4s;
 }
